Add support for async/.await
refactor `cancel_with` to accept closure that produces the desired future
add feature `futures_01` to keep compatibility with futures 0.1
add rustfmt.toml
bump version number
refactor example for both `futures_01` and default

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kyansel"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Francesco Dainese <franci.dainese@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0/MIT"
@@ -10,8 +10,14 @@ repository = "https://github.com/Karrq/kyansel"
 homepage = "https://github.com/Karrq/kyansel"
 description = "Cancellable future. Provide a future as argument and the current future will cancel if the provided future resolves first"
 
+[features]
+futures_01 = ["futures01"]
+
 [dependencies]
-futures = "0.1"
+futures01 = { version = "0.1", optional = true, package = "futures" }
+pin-project-lite = "0.1.1"
 
 [dev-dependencies]
-tokio = { version = "0.1", features = ["sync"] }
+tokio = { version = "0.2.0-alpha.6", features = ["sync"] }
+futures = "0.3.1"
+tokio01 = { version = "0.1", features = ["sync"], package = "tokio" }
