--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "kyansel"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Francesco Dainese <franci.dainese@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0/MIT"
 keywords = ["futures", "task", "cancel", "abort", "no_std"]
-documentation = "https://docs.rs/kyansel/0.3.0"
+documentation = "https://docs.rs/kyansel/0.3.1"
 repository = "https://github.com/Karrq/kyansel"
 homepage = "https://github.com/Karrq/kyansel"
 description = "Cancellable future. Provide a future as argument and the current future will cancel if the provided future resolves first"
@@ -17,3 +17,6 @@ futures_01 = { version = "0.1", optional = true, package = "futures", default-fe
 tokio = { version = "0.2.0-alpha.6", features = ["sync"] }
 futures = "0.3"
 tokio_01 = { version = "0.1", features = ["sync"], package = "tokio" }
+
+[package.metadata.docs.rs]
+all-features = true
